<resources>
    <string name="app_name">sisters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="our_mission">Our mission</string>
    <string name="what_we_do">What we do</string>
    <string name="general_government">General Government</string>
    <string name="superior_general_s_message">Superior general\'s message</string>
    <string name="who_are_we">Who are we?</string>
    <string name="founders">Founders</string>
    <string name="be_an_ihmr">Be an IHMR</string>
    <string name="vocation_and_formation">Vocation and formation</string>
    <string name="regions">Regions</string>
    <string name="contact">Contact</string>
    <string name="about_us">About Us</string>
</resources>